sample/msvc/error/c2628.cpp
// C2628.cpp
class CMyClass {}
int main(){}   // C2628 error
